syntax = "proto3";
package filecoin.slashing.pb;

option java_multiple_files = true;
option java_package = "io.textile.filecoin.slashing.pb";
option java_outer_classname = "FilecoinSlashing";
option objc_class_prefix = "TTE";

message Index {
    string tipSetKey = 1;
    map<string, Slashes> miners = 2;
}

message Slashes {
    repeated uint64 epochs = 1;
}


message GetRequest {
}

message GetReply {
    Index index = 1;
}

service API {
    rpc Get(GetRequest) returns (GetReply) {}
}
